Отображение пунктира и процентов

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <script src="dm-patterns-chart.js"></script>
 <script>
     const container = document.querySelector('#container');
-    new DmPatternsChart({ container });
+    new DmPatternsChart({
+        container,
+    });
 </script>
 </body>
 </html>
