--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<div id="container" style="width:50%;height:500px;border: 1px solid black;"></div>
+<div id="container" style="width:50%;height:500px;"></div>
 
 <script src="dm-patterns-chart.js"></script>
 <script>
