--- a/index.html
+++ b/index.html
@@ -5,13 +5,59 @@
     <title>Title</title>
 </head>
 <body>
-<div id="container" style="width:50%;height:500px;"></div>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400&display=swap');*{font-family:"Roboto",sans-serif;}
+</style>
+
+<div id="container" style="width:50%;height:700px"></div>
+<div id="container2" style="width:10%;height:150px;margin-top:50px;background:#202020;padding:10px"></div>
+<div id="container3" style="width:20%;height:500px;margin-top:50px;background:black;padding:20px; box-sizing: border-box"></div>
 
 <script src="dm-patterns-chart.js"></script>
 <script>
+    // Пример 1
     const container = document.querySelector('#container');
     new DmPatternsChart({
         container,
+        values: [50, 100, 30]
+    });
+
+    // Пример 2
+    const container2 = document.querySelector('#container2');
+    new DmPatternsChart({
+        container: container2,
+        titlesHidden: true,
+        percentsHidden: true,
+        dottedLinesHidden: true,
+        colors: {
+            ellipse: '#fff',
+            background: '#5d5d5d',
+            value: '#f9ec0e',
+        },
+        sizes: {
+            arc: 4,
+            pointRadius: 8,
+        },
+        values: [50, 100, 30]
+    });
+
+    // Пример 3
+    const container3 = document.querySelector('#container3');
+    new DmPatternsChart({
+        container: container3,
+        titlesHidden: true,
+        colors: {
+            ellipse: '#fff',
+            percents: '#fff',
+            background: '#333333',
+            value: '#f9ec0e',
+            dottedLine: '#4d4d4d',
+        },
+        sizes: {
+            arc: 4,
+            pointRadius: 8,
+        },
+        values: [50, 10, 30]
     });
 </script>
 </body>
